--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "version": 2,
+  "buildCommand": "echo 'Static site'",
+  "outputDirectory": ".",
   "headers": [
     {
       "source": "/img/(.*)",
